Added link to SIMON game

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </article>
 
                 <article>
-                    <a href="#">
+                    <a href="https://sultaany.github.io/SIMON_game/">
                         <figure>
                             <div>
                                 <img src="./imgs/SIMON_shot.png" alt="placehold" width="100%">
