--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </a>
                 </article>
                 <article>
-                    <a href="#">
+                    <a href="https://github.com/SultaanY/FilmFlix">
                         <figure>
                             <div>
                                 <img src="./imgs/FilmFlix reel.jpg" alt="placehold" width="100%">
