added Chemistry List project

--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@
             </h2>
             <div class="projects">
                 <article>
-                    <a href="#">
+                    <a href="https://sultaany.github.io/Chemistry_list/">
                         <figure>
                             <div>
-
-                                <img src="https://picsum.photos/200" alt="placehold" width="100%">
-                                <figcaption>Project 1</figcaption>
+                                <img src="./imgs/Chemistry_list_screenshot.png" alt="placehold" width="100%">
+                                <figcaption>Chemistry List</figcaption>
 
                             </div>
 
                         </figure>
-                        <h3>Project 1</h3>
-                        <p>Description</p>
+                        <h3>Chemistry List</h3>
+                        <p>A Javascript based project that helps you to keep track of lab supplies you need to order.
+                            The list uses local storage to saves items for users to come back to</p>
                     </a>
                 </article>
 
