Replit link to FilmFlix

--- a/index.html
+++ b/index.html
@@ -52,16 +52,17 @@
                 </h1>
 
                 <p>
-                    Aspiring Software engineer who recently completed a software bootcamp on HTML,CSS, Javascript,
+                    Aspiring Software engineer who recently completed a software bootcamp on HTML, CSS, Javascript,
                     SQL
-                    and python. <span>I'm interested in backend functionality so have a stronger focus on Python and
-                        developing this further</span>
+                    and Python. <span>I'm interested in backend functionality so have a stronger focus on Python and
+                        developing this further. My favourite coding book is Automate the Boring Stuff with Python by Al
+                        Sweigart.</span>
                 </p>
                 <div class="call-to-action">
                     <a href="#" class="button">
                         Resume
                     </a>
-                    <a href="#" class="button">
+                    <a href="#contact-me" class="button">
                         Contact Me
                     </a>
                 </div>
@@ -134,7 +135,8 @@
                 </div>
                 <div class="right-column">
                     <h3>A bit about me</h3>
-                    <p>As a Chemistry PhD graduate with a passion for problem-solving and a resilient mindset, I have
+                    <p>As a Chemistry PhD graduate with a passion for problem-solving and a resilient
+                        mindset, I have
                         recently completed a 12-week bootcamp in software engineering. My background in chemistry has
                         honed my analytical skills and attention to detail, which I now bring to the field of
                         technology. </p>
@@ -160,8 +162,9 @@
 
                         </figure>
                         <h3>Chemistry List</h3>
-                        <p>A Javascript based project that helps you to keep track of lab supplies you need to order.
-                            The list uses local storage to saves items for users to come back to</p>
+                        <p>A JavaScript-based project to track and manage lab supply orders. Utilizes local storage to
+                            save items, ensuring data persistence between sessions. User-friendly interface tailored for
+                            lab environments.</p>
                     </a>
                 </article>
 
@@ -173,14 +176,14 @@
                                 <figcaption>SIMON! controller</figcaption>
                             </div>
                         </figure>
-                        <h3>SIMON! controller</h3>
-                        <p>A memory game designed using HTML, CSS and Javascript. Understood how functions and loops
-                            play a
-                            pivotal role in creating functionality. </p>
+                        <h3>SIMON! Controller</h3>
+                        <p>A memory game developed with HTML, CSS, and JavaScript. This project emphasizes the
+                            importance of functions and loops in creating interactive functionality.
+                        </p>
                     </a>
                 </article>
                 <article>
-                    <a href="https://github.com/SultaanY/FilmFlix">
+                    <a href="https://replit.com/@SultaanY/FilmFlix#main.py">
                         <figure>
                             <div>
                                 <img src="./imgs/FilmFlix reel.jpg" alt="placehold" width="100%">
@@ -188,8 +191,8 @@
                             </div>
                         </figure>
                         <h3>FilmFlix</h3>
-                        <p>A python based database application implemented using SQLite3. Fully functioning menu that
-                            allows editing of database through python command line </p>
+                        <p>FilmFlix is a Python-based database application implemented with SQLite3. It features a fully
+                            functional command-line menu that allows users to edit the database. </p>
                     </a>
                 </article>
 
