change name of chemistry app

--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
                         <figure>
                             <div>
                                 <img src="./imgs/Chemistry_list_screenshot.png" alt="placehold" width="100%">
-                                <figcaption>Chemistry List</figcaption>
+                                <figcaption>ChemiCart</figcaption>
 
                             </div>
 
                         </figure>
-                        <h3>Chemistry List</h3>
+                        <h3>ChemiCart</h3>
                         <p>A JavaScript-based project to track and manage lab supply orders. Utilizes local storage to
                             save items, ensuring data persistence between sessions. User-friendly interface tailored for
                             lab environments.</p>
